# aca-ai-agent

./: .dockerignore  Dockerfile  LICENSE  azure.yaml  chat_app.py  pyproject.toml
csv-files/: customers.csv
hooks/: postdeploy.ps  postdeploy.ps1  postdeploy.sh  postup.ps  postup.ps1
infra/: README.md  container-app.bicep  container-job.bicep  deploy.sh  existing-job.bicep  main.bicep  session-pool-role-assignment.bicep  session-pool.bicep
infra/compiled/: main.json  main.orig-working.json
lab/: create-env-file.ps1  create-role-assignments.ps1  instructions.md  upload-files.ps1
lab/instructions/: index.md
src/: Dockerfile  common.py  entrypoint.sh  indexer_job.py  prompt.py  pyproject.toml
